--- a/style.css
+++ b/style.css
@@ -1,19 +1,80 @@
-.card{
-    width: 20%;
-    height: 50vh;
-    background: linear-gradient(to right,#0e1728 50%,#000721 50%);
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+  }
+  
+.container {
+    width: 100%;
+    height: 100vh;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+.card {
+    width: 30%;
+    height: 70%;
+  display: flex;
+  position: relative;
+  z-index: 0;
+}
+
+
+.card::after {
+  content: "";
+  background-color: red;
+  width: 216px;
+  height: 154px;
+  z-index: -1;
+  padding: 20px;
+  position: absolute;
+  transform: skew(3deg, 2deg);
+  right: -5px;
+  bottom: -5px;
+}
+
+.card::before {
+  content: "";
+  background-color: rgb(255, 136, 0);
+  width: 216px;
+  height: 154px;
+  z-index: -1;
+  padding: 20px;
+  position: absolute;
+  transform: skew(3deg, 2deg);
+  top: -5px;
+  left: -5px;
+}
+
+.card_first {
+  width: 50%;
+  height: 100%;
+  background-color: #000721;
+}
+
+.card_second {
+  width: 50%;
+  height: 100%;
+  background-color: #0e1728;
+}
+.content{
     color: #fff;
     font-family:  sans-serif;
     padding: 1.5rem;
-    position: relative;
-    z-index: 100;
-    border: solid 2px black;;
-}
-.content{
-    margin-top: 7rem;
-}
-.button{
+      z-index: 2;
+      background-color: transparent;
+      position: absolute;
+      width: 100%;
+      height: 50%;
+      margin-top: 12rem;
+  }
+  .title{
+      margin-bottom: 1rem;
+  }
+  .button{
     padding: .8rem 1.6rem;
+    margin-top: 1rem;
     background: transparent;
     color: #fff;
     border: solid .3px #fff;
@@ -26,20 +87,20 @@
 .card:hover .button {
     display: inline-block;
     cursor: pointer;
-    animation: animbutton 300ms 1;
+    animation: animbutton 600ms 1;
 }
 .card:hover .num {
-   transform: translateY(-50px);
-   transition: transform 200ms ease-in;
+   transform: translateY(-60px);
+   transition: transform 500ms linear;
 }
 
 .num{
-    margin-left: 6.6rem;
+    margin-left: 9.5rem;
     margin-top: -4rem;
     font-weight: 800;
     font-size: 8rem;
     position: absolute;
-    z-index: -100;
+    z-index: -1;
     color: #181f2f;
     font-stretch: condensed;
 }
@@ -53,3 +114,5 @@
         
     }
 }
+
+  
